etc/k8s/manifests/03-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "itb-mysql"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: itb-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: itb-mysql
    spec:
      automountServiceAccountToken: false
      containers:
        - image: "isaitb/gitb-mysql:1.30.1"
          imagePullPolicy: "IfNotPresent"
          name: itb-mysql
          livenessProbe:
            exec:
              command:
                - bash
                - "-c"
                - |
                  /usr/bin/mysqladmin -uroot -p$MYSQL_ROOT_PASSWORD ping &> /dev/null
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - bash
                - "-c"
                - |
                  /usr/bin/mysql --user=root --password=$MYSQL_ROOT_PASSWORD --execute "SHOW DATABASES;"
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: itb-dbdata
      restartPolicy: "Always"
      volumes:
        - name: itb-dbdata
          persistentVolumeClaim:
            claimName: itb-dbdata
