etc/k8s/manifests/05-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "itb-redis"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: itb-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: itb-redis
    spec:
      automountServiceAccountToken: false
      containers:
        - image: "isaitb/gitb-redis:1.30.1"
          imagePullPolicy: "IfNotPresent"
          name: itb-redis
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: "Always"
