etc/k8s/manifests/07-srv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "itb-srv"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: itb-srv
  template:
    metadata:
      labels:
        app.kubernetes.io/name: itb-srv
    spec:
      automountServiceAccountToken: false
      containers:
        - image: "isaitb/gitb-srv:1.30.1"
          imagePullPolicy: "IfNotPresent"
          name: itb-srv
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: "Always"
