etc/k8s/manifests/09-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "itb-ui"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: itb-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: itb-ui
    spec:
      automountServiceAccountToken: false
      containers:
        - image: "isaitb/gitb-ui:1.30.1"
          imagePullPolicy: "IfNotPresent"
          name: itb-ui
          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - mountPath: "/gitb-repository"
              name: itb-repo
      restartPolicy: "Always"
      volumes:
        - name: itb-repo
          persistentVolumeClaim:
            claimName: itb-repo
