etc/k8s/manifests/04-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "itb-mysql"
spec:
  type: "ClusterIP"
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app.kubernetes.io/name: itb-mysql
