etc/k8s/manifests/06-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "itb-redis"
spec:
  type: "ClusterIP"
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: itb-redis
