etc/k8s/manifests/08-srv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "itb-srv"
spec:
  type: "ClusterIP"
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: itb-srv
