etc/k8s/manifests/10-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "itb-ui"
spec:
  type: "ClusterIP"
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    app.kubernetes.io/name: itb-ui
